--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -39,3 +39,22 @@ main {
   border-radius: 50%;
   object-fit: cover;
 }
+
+.house-price {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: rgb(0, 0, 0);
+  color: rgb(71, 245, 48);
+}
+
+.house-img {
+  width: 100%;
+  height: 40dvh;
+  object-fit: cover;
+}
+
+.house-card {
+  border: double thick;
+  box-shadow: 0px 5px 7px;
+}
